@@ -1,5 +1,11 @@
 1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* OutFile.m ([OutFile +create:withName:]): Constify withName argument.
+	([OutFile -putString:]): Constify argument.  Reformatting throughout.
+
+	* OutFile.h: Constify withName argument to create.
+	Constify argument to putString.  Reformatting throughout.
+
 	* MessageProbeWidget.m ([MessageProbeWidget -dynamic]): Remove
 	cast to char* for setValue.
 	([MessageProbeWidget -idReceive:which]): Likewise.
